Thu Jun 23 14:14:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/operation_details.{h,cpp}:
          The exception_list method should only be build when interceptors
          are enabled

Thu Jun 23 12:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.{h,cpp}:
        * tao/ORB_Core_TSS_Resources.{h,cpp}:
          Moved ORB_Core_TSS_Resources back to its own file. Problem was
          easier then on first sight, orbconf.h was not includes so the
          TSS file was build without interceptor support

Thu Jun 23 12:40:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.{h,cpp}:
        * tao/ORB_Core_TSS_Resources.{h,cpp}:
          Moved ORB_Core_TSS_Resources to the ORB_Core file again. The
          PI tests now break and I have not an idea why but moving it
          back fixes it now. Will sort this out soon.

Thu Jun 23 09:52:00 UTC 2005  Simon Massey  <simon.massey@prismtech.com>

        * TAO_IDL/be/be_visitor_valuebox/field_ci.cpp:
        * TAO_IDL/be/be_visitor_valuebox/union_member_ci.cpp:

          Replaced ACE_UNUSED_ARG() with native C++ unnamed parameters
          in responce to Ossama's request that the macro is only used
          in places where normal practices are not available.

        * orbsvcs/IFR_Service/ifr_adding_visitor.cpp:

          Removed unused arg.

Wed Jun 22 18:49:03 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/ORB_Core.h:

          Added include of ORB_Core_TSS_Resources.h, so when the
          ACE_TSS_TYPE tss_resources_ member is declared, there
          will be knowledge of a default constructor.

Wed Jun 22 11:34:12 2005  Gary Maxey <gary.maxey@hp.com>

        * TAO_IDL/fe/y.tab.cpp
        * TAO_IDL/fe/idl.yy

          Added valuebox support

Wed Jun 22 08:23:16 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Log/Iterator_i.cpp (handle_timeout):
