@@ -47,9 +47,19 @@ int
 TAO_Log_Compaction_Handler::handle_timeout (const ACE_Time_Value&,
                                             const void *)
 {
-  // TODO: can't invoke remove_old_records until access to record
-  // store is protected by synchronization primitives.
-
-  // this->log_->remove_old_records(ACE_ENV_SINGLE_ARG_PARAMETER);
+  ACE_TRY_NEW_ENV
+    {
+      // TODO: can't invoke remove_old_records until access to record
+      // store is protected by synchronization primitives.
+#if 0
+      this->log_->remove_old_records(ACE_ENV_SINGLE_ARG_PARAMETER);
+      ACE_TRY_CHECK;
+#endif
+    }
+  ACE_CATCHANY
+    {
+    }
+  ACE_ENDTRY;
+  
   return 0;
 }
