@@ -41,6 +41,15 @@ TAO_Log_Flush_Handler::cancel ()
 int
 TAO_Log_Flush_Handler::handle_timeout (const ACE_Time_Value&, const void *)
 {
-  log_->flush (ACE_ENV_SINGLE_ARG_PARAMETER);
+  ACE_TRY_NEW_ENV
+    {
+      log_->flush (ACE_ENV_SINGLE_ARG_PARAMETER);
+      ACE_TRY_CHECK;
+    }
+  ACE_CATCHANY
+    {
+    }
+  ACE_ENDTRY;
+  
   return 0;
 }
